XMLtoCSV/objects/unpackaged/objects/Preferences_vod__c.object
<CustomObject>
    <description>A set of preferences for users or profiles.</description>
    <fields>
        <fullName>Analytic_Market_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VInsights Market preference.</description>
        <label>Analytic Market</label>
        <referenceTo>Analytics_Markets_vod__c</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analytics_Call_Status_vod__c</fullName>
        <description>This field stores the last user selection of Call Status on Analytics. Value is a comma separated list of Call Statuses that are checked on the Average Calls per Day report.</description>
        <label>Analytics Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Call_Types_vod__c</fullName>
        <description>VInsights Call Types preference. Value is a comma separated list of Call Types that are checked on the Effort vs. Results report.</description>
        <label>Analytics Call Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Compare_Territories_vod__c</fullName>
        <description>VInsights compare territories preference. Value is a JSON formatted string of key value pairs with the territory id being the key and the value always being true or false if the territory should display as checked.</description>
        <label>Analytics Compare Territories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Count_Attendees_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if group calls should be counted as one call or if each attendee should be counted as a separate call - used for average calls per day and other fields.</description>
        <label>Analytics Count Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytics_Count_Weekend_Calls_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the Average Calls Per Day report. When enabled and true, weekend calls are included in the calculation. Weekend days are based on Veeva Setting VINSIGHTS_CALENDAR_CONFIG</description>
        <inlineHelpText>Used for the Average Calls Per Day report. When enabled and true, weekend calls are included in the calculation. Weekend days are based on Veeva Setting VINSIGHTS_CALENDAR_CONFIG</inlineHelpText>
        <label>Count Weekend Calls?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytics_Cycle_Plans_vod__c</fullName>
        <description>VInsights Cycle Plan preference</description>
        <label>Analytics Cycle Plans</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Datatype_vod__c</fullName>
        <description>VInsights Datatype preference.</description>
        <label>Analytics Datatype</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Display_By_vod__c</fullName>
        <description>VInsights Display By preference for Cycle Plan Analysis page</description>
        <label>Analytics Display By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Display_Competitors_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting retains a users selection of the Display Competitions checkbox in VInsights.</description>
        <label>Analytics Display Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytics_Market_Category_vod__c</fullName>
        <description>VInsights Market Category preference for the user.</description>
        <label>Analytics Market Category</label>
        <picklist>
            <picklistValues>
                <fullName>MyMarkets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AllMarkets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analytics_My_Products_vod__c</fullName>
        <description>This field stores the sticky product selections that are used on the Reach &amp; Frequency report.</description>
        <label>Analytics My Products</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Payer_Top_Products_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting retains a users selection of the Top Products checkbox in VInsights.</description>
        <label>Analytics Payer Top Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analytics_Products_vod__c</fullName>
        <description>VInsights Products preference by market.  Value is a semi-colon separated list of market groups, each market group is a comma separated list with the first value being the market id, and the rest of the values being the selected product groups for that market.</description>
        <label>Analytics Products</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Scale_vod__c</fullName>
        <description>VInsights Scale preference.</description>
        <label>Analytics Scale</label>
        <picklist>
            <picklistValues>
                <fullName>Week_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analytics_Segment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VInsights Segment preference.</description>
        <label>Analytics Segment</label>
        <referenceTo>View_vod__c</referenceTo>
        <relationshipLabel>Preferences (Analytics Segment)</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analytics_Start_End_Dates_vod__c</fullName>
        <description>This field stores the Start and End dates last selected for each report in a JSON format.</description>
        <label>Analytics Start End Dates</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Territories_vod__c</fullName>
        <description>VInsights territories preference. Value is a JSON formatted string of key value pairs with the territory id being the key and the value always being true or false if the territory should display as checked.</description>
        <label>Analytics Territories</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analytics_Timeframe_vod__c</fullName>
        <description>VInsights Timeframe preference for the user.</description>
        <label>Analytics Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>3;Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6;Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12;Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24;Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUARTERLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CALENDAR_SHARE_RECENT_ITEMS_vod__c</fullName>
        <description>Comma delimited list of the last 10 shared calendars viewed</description>
        <label>Calendar Share Recent Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calls_Per_Day_vod__c</fullName>
        <description>This field stores the  calls per day  value a user selected on Schedule Calls.</description>
        <label>Calls Per Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollapseSchedule_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the last collapse setting a user selected on the My Schedule page.</description>
        <label>CollapseSchedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_CLM_Calendar_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, for users that have a CLM installed, the CLM features of the day view won&apos;t be shown.</description>
        <label>Disable CLM Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Call_Cycle_View_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the user will not see the call cycle tab on the tablet.</description>
        <label>Disable Call Cycle View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_ORDER_LINE_TOTAL_ROUND_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines when to perform the rounding for the Order Management product. If the field is visible based on field level security then the calculation will be ROUND(QTY * PRICE * DISCOUNT). If the field is not visible based on field level security then the calculation will be ROUND(PRICE * DISCOUNT) * QTY</description>
        <label>ENABLE ORDER LINE TOTAL ROUND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Order_Single_entry_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use field level security of this field to enable/disable mass entry function of order management</description>
        <label>Enable Order Single Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Country_Config_vod__c</fullName>
        <defaultValue>&quot;US;1&quot;</defaultValue>
        <description>Contains two parameters separated by a semicolon. The first is the default country used when creating an event using Veeva Event Management. The second is a number to indicate if the user should see the country picklist or not when creating an event. A value of 0 indicates the user cannot choose a different country. A value of 1 indicates the user can choose a different country. For example, if the user&apos;s default event country is US, and the user has the ability to create events in other countries, then the value should be US;1.</description>
        <label>Event Country Config</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Management_User_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if a user has Veeva Event Management. To turn on Event Management, the user must have read permission to this field. The checkbox does not need to be checked.</description>
        <label>Event Management User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five_Day_Week_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If false the user will get a five day week (Monday-Friday) on the tablet.  If true it will be a seven day week.</description>
        <label>Five Day Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary_View_vod__c</fullName>
        <description>This field stores the last Benefit Design and Market that was selected for a Formulary Control on Account in a JSON format.</description>
        <label>Formulary View</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JDNET_Segment_vod__c</fullName>
        <description>This field is used to store the last segment that was selected for the JDNET reports in VInsights.</description>
        <label>JDNET Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Account_View_Used_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to view.  This is the last account view used in My Accounts.</description>
        <label>Last Account View Used</label>
        <referenceTo>View_vod__c</referenceTo>
        <relationshipLabel>Preferences (Last Account View Used)</relationshipLabel>
        <relationshipName>Preferences_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Analytic_vod__c</fullName>
        <description>The Last Analytic field stores the last Analytic report that a User has run.  When the User navigates to the Analytics Tab, the report stored in the Last Analytic field will be displayed to the User.</description>
        <label>Last Analytic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Scheduler_Account_List_vod__c</fullName>
        <description>Name of the Last Scheduler Account List that was selected, so that it can be sticky</description>
        <label>Last Scheduler Account List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Scheduler_Bookmark_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the last bookmark used in the call scheduler.</description>
        <label>Last Scheduler Bookmark</label>
        <referenceTo>Bookmark_vod__c</referenceTo>
        <relationshipLabel>Preferences (Last Scheduler Bookmark)</relationshipLabel>
        <relationshipName>Preferences_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Target_vod__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This field stores the last target value a user selected on the Average Calls per Day analytic.</description>
        <label>Last Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Territory_Used_vod__c</fullName>
        <description>This is the last territory used in My Accounts.  This is either the territory id or &quot;all&quot;.</description>
        <label>Last Territory Used</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_View_Used_vod__c</fullName>
        <description>This setting retains a users selection of the last displayed view or account list</description>
        <label>Last View Used</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCCP_Activity_Type_Switch_vod__c</fullName>
        <description>Last setting of the My/Team Activity switch</description>
        <label>MCCP Activity Type Switch</label>
        <picklist>
            <picklistValues>
                <fullName>My_Activity_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team_Activity_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_vod__c</fullName>
        <description>The profile id associated with these preferences.</description>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Per_Page_vod__c</fullName>
        <description>This setting retains a users selection of the number of records to view in each page of the My Accounts page</description>
        <label>Records Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduler_Cycle_Plan_Display_vod__c</fullName>
        <description>Stores the user&apos;s display settings in the scheduler for cycle plans. Format of the value is: CONTEXT;ATTRIBUTE;DETAIL_ATTRIBUTE</description>
        <label>Scheduler Cycle Plan Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>A picklist set of values to determine the scope of the preferences.  For example, preferences can be assigned at the &quot;User&quot; level or the &quot;Profile&quot; level.  A corresponding field must be created for each scope.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to user.  This indicates what user the preferences are made for.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preferences_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preferences</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User_vod__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Preferences Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>